# st-vs-c

./: .gitignore  README.md  shell.nix  st-vs-c.cabal
cbits/: cfuns.c
src/: Main.hs
